--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         }
     ],
     "require": {
-        "omnipay/common": "^3"
-
+        "omnipay/common": "^3",
+      "ext-json": "*"
     },
     "autoload": {
         "psr-4": { "Omnipay\\BanqueMisr\\" : "src/" }
